--- a/.github/workflows/Ci.yml
+++ b/.github/workflows/Ci.yml
@@ -11,15 +11,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    - run: |
+          date > output.txt
+
+      - name: Download File
+        uses: actions/download-artifact@v2
+        with:
+          name: output.txt
+
+      - run: cat output.txt
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: create file with date
-      uses: output_file="$(date +'%Y-%m-%d')-output.txt"
-            your_command > "$output_file"
-            echo "File generated: $output_file"
-
 
     - name: Set up Java
       uses: actions/setup-java@v3
