--- a/.github/workflows/Ci.yml
+++ b/.github/workflows/Ci.yml
@@ -24,16 +24,8 @@ jobs:
         distribution: 'temurin'
 
     - name: validate with Maven
-      run: mvn validate
+      run: mvn clean install
 
-    - name: compile with Maven
-      run: mvn compile
-    - name: package
-      run: mvn package
-    
-    cache: 'maven'
-    - name: Build with Maven
-      run: mvn -B package --Demo.java pom.xml
     
 
 
