--- a/.github/workflows/Ci.yml
+++ b/.github/workflows/Ci.yml
@@ -20,10 +20,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - run: mvn clean install
-      
-    - name: code test
-      run: mvn test
+    - run: |
+          mvn clean install
+          mvn test
       
         
    
