--- a/.github/workflows/Ci.yml
+++ b/.github/workflows/Ci.yml
@@ -22,6 +22,14 @@ jobs:
         distribution: 'temurin'
     - run: |
           mvn clean install
+          
+          
+    - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+    - run: |
           mvn test
       
         
