--- a/.github/workflows/Ci.yml
+++ b/.github/workflows/Ci.yml
@@ -15,13 +15,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Java
+    - name: Set up Java and run build
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         
-    - name: code build   
+    
     - run: mvn clean install
              
     - name: code test
